@@ -896,9 +896,10 @@ static void *in_R_HTTPOpen2(const char *url, const char *headers,
 	return NULL;
     }
 
-    wictxt->session = InternetOpenUrl(wictxt->hand, url, NULL, 0,
-	INTERNET_FLAG_KEEP_CONNECTION | INTERNET_FLAG_NO_CACHE_WRITE,
-				      0);
+    // use keep-alive semantics, do not use local WinInet cache.
+    DWORD flags = INTERNET_FLAG_KEEP_CONNECTION | INTERNET_FLAG_NO_CACHE_WRITE;
+    if(!cacheOK) flags |= INTERNET_FLAG_PRAGMA_NOCACHE;
+    wictxt->session = InternetOpenUrl(wictxt->hand, url, NULL, 0, flags, 0);
     if(!wictxt->session) {
 	DWORD err1 = GetLastError(), err2, blen = 101;
 	InternetCloseHandle(wictxt->hand);
